--- a/style.css
+++ b/style.css
@@ -15,7 +15,11 @@ h2 {
 .info {
     display: flex;
     justify-content: space-evenly;
+}
 
+.cam-container {
+    display: flex;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 1080px) {
