--- a/style.css
+++ b/style.css
@@ -22,10 +22,19 @@ h2 {
     justify-content: center;
 }
 
+#input_video {
+    width: 70vw
+}
+
+
 @media only screen and (max-width: 1080px) {
 
     h2 {
         color: green;
+    }
+
+    #input_video {
+        width: 100vw
     }
 
 }
