--- a/style.css
+++ b/style.css
@@ -1,7 +1,18 @@
+html {
+    background-image: url(maybe2.jpg);
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: 150%;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 body {
     margin: 0;
     padding: 0;
-    background-color: rgb(227, 227, 233);
+
+
 }
 
 h2 {
@@ -23,7 +34,9 @@ h2 {
 }
 
 #input_video {
-    width: 70vw
+    width: 70vw;
+    border-radius: 15%;
+
 }
 
 
