--- a/style.css
+++ b/style.css
@@ -15,8 +15,9 @@ html {
 
 
 h2 {
-    font-size: 64px;
-    color: wheat margin: 0;
+    font-size: 60px;
+    color: wheat;
+    margin: 0;
     padding: 0;
 }
 
@@ -43,13 +44,11 @@ h2 {
 }
 
 #input_video {
-    width: 70vw;
+    width: 65vw;
     border-radius: 8%;
     visibility: hidden;
 
-
 }
-
 
 @media only screen and (max-width: 1080px) {
 
